test/cbmc/negative_tests/unsigned_overflow_check/unsigned_overflow_check_harness.c
../../aws-templates-for-cbmc-proofs/template-for-repository/negative_tests/unsigned_overflow_check/unsigned_overflow_check_harness.c